<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- URL HOST CONNECTION-->
    <!--    <string name="url_host_connection">http://186.176.211.115:3000</string>-->
       <string name="url_host_connection">http://192.168.1.68:3000</string>
    <!--  <string name="url_host_connection">https://jfutbol.herokuapp.com</string>-->
     <!-- URL HOST CONNECTION-->

    <!-- URL HOST CONNECTION-->

    <string name="app_name">JFUTBOL</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_main_menu">Main Menu</string>

    <!-- Nav Drawer Menu Items PLAYER -->
    <string-array name="nav_drawer_items_player">
        <item >JFUTBOL</item>
        <item >NOTIFICATIONS</item>
        <item >MY TEAMS</item>
        <item >PLAYERS</item>
        <item >SOCCER FIELDS</item>
        <item >MY MATCHES</item>
        <item >MY ACCOUNT</item>
        <item >SETTINGS</item>
    </string-array>

    <!-- Nav Drawer List Item Icons PLAYER -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons_player">
        <item>@drawable/home</item>
        <item>@drawable/notification_w</item>
        <item>@drawable/my_teams</item>
        <item>@drawable/find_player</item>
        <item>@drawable/find_soccer_field</item>
        <item>@drawable/matches</item>
        <item>@drawable/user</item>
        <item>@drawable/settings</item>
    </array>

    <!-- Nav Drawer Menu Items OENWER FIELD -->
    <string-array name="nav_drawer_items_owner_field">
        <item >JFUTBOL</item>
        <item >NOTIFICATIONS</item>
        <item >SOCCER CENTERS</item>
        <item >MY ACCOUNT</item>
        <item >SETTINGS</item>
    </string-array>

    <!-- Nav Drawer List Item Icons OWNER FIELD -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons_owner_field">
        <item>@drawable/home</item>
        <item>@drawable/notification_w</item>
        <item>@drawable/my_teams</item>
        <item>@drawable/user</item>
        <item>@drawable/settings</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="my_account_fragment">Here My Account Page</string>



<string name="title_activity_user__register">User Register</string>
    <string name="user_register_title">Signing Up</string>
    <string name="user_myaccount_title">My Account</string>


    <string name="user_login_link">Log in</string>
    <string name="title_activity_main_activityttt">MainActivityttt</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




    <!-- LOGIN PAGE-->
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="register_link">Sign Up for JFutboL</string>
    <string name="forgot_password_link">Forgot Password?</string>
    <string name="welcome">Welcome</string>
    <string name="activateAccount">Your account needs to be activated</string>
    <string name="user_not_registered">Invalid Credentials</string>
    <string name="not_server_connection">No server connection!</string>
    <string name="processing">Processing...</string>
    <!-- LOGIN PAGE-->

    <!-- REGISTER AND MY ACCOUNT-->
    <string name="password_does_not_match">The password and confirm password values does not match, please verify!</string>
    <string name="required_fields">Some required fields needs to be filled, please verify!</string>
    <string name="required_image">Please pick an image!</string>
    <string name="user_updated_success">User updated successfully!</string>
    <!-- REGISTER AND MY ACCOUNT-->

    <!-- ADD TEAM-->
    <string name="team_added_success">Team added successfully!</string>

    <!-- ADD TEAM-->

    <!-- ADD SOCCER CENTER-->
    <string name="center_added_success">Soccer Center added successfully!</string>

    <!-- ADD SOCCER CENTER-->

    <!-- ADD SOCCER FIELD-->
    <string name="field_added_success">Field added successfully!</string>

    <!-- ADD SOCCER FIELD-->


    <!-- PLAYER SKILL FRAGMENT
    <string name="GK">GK (Goalkeeper)</string>
    <string name="SW_LIB">SW/LIB (Sweeper/Libero)</string>
    <string name="CB">CB (Central Back)</string>
    <string name="RB">RB (Right Back)</string>
    <string name="LB">LB (Left Back)</string>
    <string name="RWB">RWB (Right Wing Back)</string>
    <string name="LWB">LWB (Left Wing Back)</string>
    <string name="DMF">DMF (Defensive Mildfielder)</string>
    <string name="CMF">CMF (Central Mildfielder)</string>
    <string name="RMF">RMF (Right Mielfielder)</string>
    <string name="LMF">LMF (Left Mielfielder)</string>
    <string name="AMF">AMF (Advanced Mieldfielder)</string>
    <string name="SS">SS (Second Striker)</string>
    <string name="RWF_RW">RWF/RW (Right Wing Forward)</string>
    <string name="LWF_LW">LWF/LW (Left Wing Forward)</string>
    <string name="CF">CF (Center Forward)</string>
    <string name="ST">ST (Striker)</string>
    <string name="FCF">FCF (False Center Forward)</string>
     -->

    <string name="refresh">Refresh</string>

    <string name="title_activity_add_new_team">NEW TEAM</string>
    <string name="title_activity_add_new_soccer_center">NEW SOCCER CENTER</string>
    <string name="title_activity_add_new_soccer_field">NEW SOCCER FIELD</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="saveAndNew">Save and New</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="filter">Filter</string>

    <string name="title_activity_team__info">Team Information</string>
    <string name="title_activity_search_player">Search Player</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_search_match">Searching Match</string>
    <string name="title_activity_search_team">Searching Team</string>
    <string name="title_activity_code__activation">Code Activation</string>

<!-- PLAYER SKILL FRAGMENT-->




</resources>
